[metadata]
name = jamchemy
version = 0.1.0
license = MIT
author = Zbigniew Siciarz
author_email = zbigniew@siciarz@.net
url = https://github.com/zsiciarz/jamchemy
description = Strawberry jam with some SQLAlchemy :)
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.10
package_dir=
    =src
packages = find:
# TODO: install_requires

[options.packages.find]
where = src
